# m3dp-docdistill

./: LICENSE  README.md  pyproject.toml  test_output.txt  test_output_callback.txt  test_output_debug.txt  test_output_help.txt
docs/: user_guide.md
src/doc_distill/: __init__.py  cli.py  compressor.py  converter.py
tests/: conftest.py  test_cli.py  test_compressor.py  test_converter.py
